// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card default 1`] = `
<li
  className="index__bathingspot-list-item"
  data-spot-id={1}
  id="1"
>
  <div>
    <img
      alt=""
      className="spot-image"
      src=""
    />
    <img
      alt=""
      className="state-image"
      src=""
    />
    <span
      className="spot-title"
    >
      Sweetwater
    </span>
    <span
      className="asteriks"
    >
       * 
    </span>
    <span
      className="spot-water"
    >
      Sweet
    </span>
    <a
      className="is-small button index__bathingspot-list-item-button is-pulled-right"
      href="/badestellen/1"
      onClick={[Function]}
    >
      Detail
    </a>
  </div>
</li>
`;

exports[`Storyshots SpotEditor default 1`] = `
<div>
  <div
    className="modal is-active"
  >
    <div
      className="modal-background"
    />
    <div
      className="modal-content"
    >
      <form
        onReset={[Function]}
        onSubmit={[Function]}
        style={
          Object {
            "paddingTop": "10px",
          }
        }
      >
        <div
          className="field is-grouped is-grouped-right"
        >
          <p
            className="control"
          >
            <button
              className="button is-primary"
              disabled={false}
              type="submit"
            >
              Speichern
            </button>
          </p>
          <p
            className="control"
          >
            <button
              className="button is-is-light"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Abbrechen
            </button>
          </p>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Basis Daten
            </legend>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="name"
                >
                  Name
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="name"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                      value="foo"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="nameLong"
                >
                  Langer Name
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="nameLong"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="water"
                >
                  Gewässer
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="water"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="district"
                >
                  Distrikt
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="district"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="street"
                >
                  Straße
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="street"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="postalCode"
                >
                  Postleitzahl
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="postalCode"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="city"
                >
                  Stadt
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="city"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="website"
                >
                  Website URL
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="website"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="lastClassification"
                >
                  Letzte Klassifizierung
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="lastClassification"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="image"
                >
                  Bild URL
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="image"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="latitude"
                >
                  Latitude
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="latitude"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="longitude"
                >
                  Longitude
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="longitude"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="elevation"
                >
                  Höhe über NN
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="elevation"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="apiEndpoints"
                >
                  API Endpoints
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="apiEndpoints"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="cyanoPossible"
                    >
                      <input
                        name="cyanoPossible"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Cyanobakterien möglich
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Hygienische Beeinträchtigung durch:
            </legend>
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="influencePurificationPlant"
              >
                kommunale Klärwerke
              </label>
              <div
                className="control"
              >
                <div
                  className="select"
                >
                  <select
                    name="influencePurificationPlant"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value="yes"
                    >
                      Ja
                    </option>
                    <option
                      value="unknown"
                    >
                      Unbekannt
                    </option>
                    <option
                      value="no"
                    >
                      Nein
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="influenceCombinedSewerSystem"
              >
                Mischwassereinleitungen aus urbanen Gebieten
              </label>
              <div
                className="control"
              >
                <div
                  className="select"
                >
                  <select
                    name="influenceCombinedSewerSystem"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value="yes"
                    >
                      Ja
                    </option>
                    <option
                      value="unknown"
                    >
                      Unbekannt
                    </option>
                    <option
                      value="no"
                    >
                      Nein
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="influenceRainwater"
              >
                Regenwassereileitung aus urbanen Gebieten
              </label>
              <div
                className="control"
              >
                <div
                  className="select"
                >
                  <select
                    name="influenceRainwater"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value="yes"
                    >
                      Ja
                    </option>
                    <option
                      value="unknown"
                    >
                      Unbekannt
                    </option>
                    <option
                      value="no"
                    >
                      Nein
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div
              className="field"
            >
              <label
                className="label"
                htmlFor="influenceAgriculture"
              >
                Einleitungen aus der Landwirtschaft
              </label>
              <div
                className="control"
              >
                <div
                  className="select"
                >
                  <select
                    name="influenceAgriculture"
                    onBlur={[Function]}
                    onChange={[Function]}
                  >
                    <option
                      value="yes"
                    >
                      Ja
                    </option>
                    <option
                      value="unknown"
                    >
                      Unbekannt
                    </option>
                    <option
                      value="no"
                    >
                      Nein
                    </option>
                  </select>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Zuständiges Gesundheitsamt
            </legend>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartment"
                >
                  Name
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="healthDepartment"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentAddition"
                >
                  Zusatz
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="healthDepartmentAddition"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentStreet"
                >
                  Straße
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="healthDepartmentStreet"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentPostalCode"
                >
                  Postleitzahl
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="healthDepartmentPostalCode"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentCity"
                >
                  Stadt
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="healthDepartmentCity"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentMail"
                >
                  E-Mail
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="healthDepartmentMail"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="email"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="healthDepartmentPhone"
                >
                  Telefonnummer
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="healthDepartmentPhone"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="box"
        >
          <fieldset>
            <legend
              className="title is-5"
            >
              Zusatz Daten
            </legend>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <label
                  className="label"
                  htmlFor="waterRescue"
                >
                  Wasserrettung
                </label>
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <input
                      className=" input"
                      name="waterRescue"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="waterRescueThroughDLRGorASB"
                    >
                      <input
                        name="waterRescueThroughDLRGorASB"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Wasserrettung durch DLRG oder ASB?
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="lifeguard"
                    >
                      <input
                        name="lifeguard"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Rettungschwimmer vor Ort
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="disabilityAccess"
                    >
                      <input
                        name="disabilityAccess"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Barrierefreie
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="disabilityAccessBathrooms"
                    >
                      <input
                        name="disabilityAccessBathrooms"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Barrierefreie Waschräume
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="hasDisabilityAccesableEntrence"
                    >
                      <input
                        name="hasDisabilityAccesableEntrence"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Barrierefreier Eingang
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="restaurant"
                    >
                      <input
                        name="restaurant"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Restaurant
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="snack"
                    >
                      <input
                        name="snack"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Snack
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="parkingSpots"
                    >
                      <input
                        name="parkingSpots"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Parkplätze
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="bathrooms"
                    >
                      <input
                        name="bathrooms"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Waschräume
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="bathroomsMobile"
                    >
                      <input
                        name="bathroomsMobile"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Mobile Toiletten
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="field is-horizontal"
            >
              <div
                className="field-label is-normal"
              >
                <div
                  className="label"
                />
              </div>
              <div
                className="field-body"
              >
                <div
                  className="field"
                >
                  <div
                    className="control"
                  >
                    <label
                      className="checkbox"
                      htmlFor="dogban"
                    >
                      <input
                        name="dogban"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="form__checkbox--distance"
                      >
                        Hundeverbot
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          className="field is-grouped is-grouped-right"
        >
          <p
            className="control"
          >
            <button
              className="button is-primary"
              disabled={false}
              type="submit"
            >
              Speichern
            </button>
          </p>
          <p
            className="control"
          >
            <button
              className="button is-is-light"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Abbrechen
            </button>
          </p>
        </div>
      </form>
    </div>
    <button
      aria-label="close"
      className="modal-close is-large"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots SpotEditor/Checkbox default 1`] = `
<div>
  <div
    className="field is-horizontal"
  >
    <div
      className="field-label is-normal"
    >
      <div
        className="label"
      />
    </div>
    <div
      className="field-body"
    >
      <div
        className="field"
      >
        <div
          className="control"
        >
          <label
            className="checkbox"
            htmlFor="name"
          >
            <input
              checked={true}
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="form__checkbox--distance"
            >
              The Checkbox
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className="field is-grouped is-grouped-right"
  >
    <p
      className="control"
    >
      <button
        className="button is-primary"
        disabled={false}
        type="submit"
      >
        Speichern
      </button>
    </p>
    <p
      className="control"
    >
      <button
        className="button is-is-light"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
    </p>
  </div>
</div>
`;

exports[`Storyshots SpotEditor/Input text 1`] = `
<div>
  <div
    className="field is-horizontal"
  >
    <div
      className="field-label is-normal"
    >
      <label
        className="label"
        htmlFor="name"
      >
        The Input
      </label>
    </div>
    <div
      className="field-body"
    >
      <div
        className="field"
      >
        <div
          className="control"
        >
          <input
            className=" input"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            type="text"
            value="foo"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="field is-grouped is-grouped-right"
  >
    <p
      className="control"
    >
      <button
        className="button is-primary"
        disabled={false}
        type="submit"
      >
        Speichern
      </button>
    </p>
    <p
      className="control"
    >
      <button
        className="button is-is-light"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
    </p>
  </div>
</div>
`;

exports[`Storyshots SpotEditor/Select default 1`] = `
<div>
  <div
    className="field"
  >
    <label
      className="label"
      htmlFor="name"
    >
      The Checkbox
    </label>
    <div
      className="control"
    >
      <div
        className="select"
      >
        <select
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          value="yes"
        >
          <option
            value="yes"
          >
            YES
          </option>
          <option
            value="no"
          >
            NO
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    className="field is-grouped is-grouped-right"
  >
    <p
      className="control"
    >
      <button
        className="button is-primary"
        disabled={false}
        type="submit"
      >
        Speichern
      </button>
    </p>
    <p
      className="control"
    >
      <button
        className="button is-is-light"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
    </p>
  </div>
</div>
`;
